[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-helper"
version = "0.0.3"
authors = [
  { name="Ernestas Kardzys", email="ernestas.kardzys@gmail.com" },
]
description = "A collection of commonly used algorithmic trading functions"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "ta>=0.11.0",
    "pytest>=8.4.2",
    "ib_insync>=0.9.86",
    "scipy>=1.16.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/ernestaskardzys/trading-helper"
Issues = "https://github.com/ernestaskardzys/trading-helper/issues"